live reloading setup and starting to add page sections for different components.

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -27,6 +27,8 @@
     border-top: 1px solid #eee;
     padding: 4rem 0;
     margin-bottom: 0;
+/*    border: 1px solid #E1E1E1;
+    border-radius: 4px;*/
 }
 
 .value-img {
