--- a/src/components/component.css
+++ b/src/components/component.css
@@ -1,8 +1,24 @@
 h1 {
-    text-align: center;
+    /*text-align: center;*/
 }
 
 .button {
     border-radius: 100px;
     font-size: 14px;
+}
+
+
+.pl-palette-color {
+    display: inline-block;
+    padding-bottom: 4px;
+    margin-bottom: 8px;
+    margin-right: 8px;
+    border: 1px solid #eee;
+    text-align: center;
+}
+
+.pl-palette-color .pl-palette-preview {
+    border-radius: 4px 4px 0 0;
+    width: 125px;
+    height: 100px;
 }
