--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -18,7 +18,7 @@
 
 .docs-header {
     text-transform: uppercase;
-    font-size: 1.4rem;
+    /*font-size: 1.4rem;*/
     letter-spacing: .2rem;
     font-weight: 600;
 }
